# recollect-lines

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: providers.example.yaml  providers.schema.json
docs/: PHASE-5.md  PRD.md  README.md  RFC-001.md  bounded-debate-workflow.md  claim-capability-diagnostics.md  cli.md  cost-rework-policy.md  getting-started.md  mcp.md  migration-runtime-profile.md  model-profile-resource-metadata.md  operator-guide.md  phase-1.md  phase-2.md  phase-4.md  phase-5b.md  phase-5c.md  phase-6a.md  phase-6b.md  phase-6b5.md  phase-6c.md  phase-6d.md  phase-7a.md  phase-7b.md  phase-7c-rfc.md  release-guide.md  review-report.md  user-flows.md  verified-investigation-report.md
scripts/: clean_install_acceptance.py  dist_artifact_acceptance.py  five_minute_acceptance.py  mcp_acceptance.py  run_codex_demo.py  side_agent_fixture_acceptance.py
tests/: test_adaptor_import_compat.py  test_adaptor_package.py  test_agent_profiles.py  test_bounded_debate_workflow.py  test_broker.py  test_capability_contract.py  test_capability_warnings.py  test_claim_capability_diagnostics.py  test_claude_code_adapter.py  test_claude_permission_mode_policy.py  test_codex_adapter.py  test_completion_events.py  test_contract_conflict.py  test_cost_rework_policy.py  test_cursor_adapter.py  test_cursor_uncollected_reconciliation.py  test_direct_api_runtime.py  test_docs_product.py  test_init_command.py  test_launch_spec_contract.py  test_lifecycle_recovery.py  test_mcp_commands.py  test_mcp_server.py  test_model_profile.py  test_model_selection.py  test_models_side_agent.py  test_opencode_adapter.py  test_p0_containment.py  test_phase_6d.py  test_phase_7a.py  test_phase_7b.py  test_phase_7c1.py  test_phase_7c2.py  test_phase_7c3.py  test_phase_7c4.py  test_provider_commands.py  test_providers.py  (+17 more)
(+114 files in other folders)
