[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recollect-lines"
version = "0.1.0"
description = "Local-first broker for delegating agent work and recollecting evidence-backed results"
requires-python = ">=3.11"

[project.scripts]
recollect = "recollect_lines.cli:main"
recollect-mcp = "recollect_lines.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
